==> Jean-MarcHarvengt/MCUME/MCUME_pico/tft_t/tft_t_dma.cpp <==
#include "TFT_T_DMA.h"
#include "tft_font8x8.h"
#include "pico/stdlib.h"
#include "pico/multicore.h"
#include "hardware/spi.h"
#include "hardware/dma.h"
#include "hardware/irq.h"
#include <string.h>
#define digitalWrite(pin, val) gpio_put(pin, val)
#define SPICLOCK 60000000
#define SPI_MODE SPI_CPOL_0
#define SPI_MODE SPI_CPOL_1
#define SPI_MODE SPI_CPOL_0

static void setDmaStruct() {
  uint32_t remaining = TFT_HEIGHT*TFT_WIDTH*2;
  int i=0;
  nbTransfer = 0;
  uint16_t col=RGBVAL16(0x00,0x00,0x00);;
  while (remaining > 0) {
    uint16_t * fb = blocks[i];
    int32_t len = (remaining >= (LINES_PER_BLOCK*TFT_WIDTH*2)?LINES_PER_BLOCK*TFT_WIDTH*2:remaining);
#ifdef TFT_DEBUG 
    printf("%d\n",(unsigned long)blocks[i]);        
    printf("%d\n",remaining);        
#endif        
    switch (i) {
      case 0:
        if (fb == 0) fb = (uint16_t*)((int)malloc(len+64)&0xffffffe0);
        //fb=&fb0[0];
#ifdef TFT_DEBUG        
        col = RGBVAL16(0x00,0xff,0x00);
#endif        
        break;
      case 1:
        if (fb == 0) fb = (uint16_t*)((int)malloc(len+64)&0xffffffe0);
        //fb=&fb1[0];
#ifdef TFT_DEBUG        
        col = RGBVAL16(0x00,0xff,0xff);
#endif        
        break;
      case 2:
        if (fb == 0) fb = (uint16_t*)((int)malloc(len+64)&0xffffffe0);
        //fb=&fb2[0];
#ifdef TFT_DEBUG        
        col = RGBVAL16(0x00,0x00,0xff);
#endif        
        break;
      case 3:
        if (fb == 0) fb = (uint16_t*)((int)malloc(len+64)&0xffffffe0);
        //fb=&fb3[0];
#ifdef TFT_DEBUG        
        col = RGBVAL16(0xff,0x00,0xff);
#endif        
        break;
    }
    blocks[i] = fb;
    blocklens[i] = len/2;
    if (blocks[i] == 0) {
      printf("LI9341 allocaltion failed for block %d\n",i);
      sleep_ms(10000);    
    }
    nbTransfer++;
    remaining -= len;    
    i++;
  }    
    

  // Setup the control channel
  dmaconfig = dma_channel_get_default_config(dma_tx);
  channel_config_set_transfer_data_size(&dmaconfig, DMA_SIZE_16);
  channel_config_set_dreq(&dmaconfig, TFT_SPIDREQ);  
  //channel_config_set_read_increment(&dmaconfig, true); // read incrementing
  //channel_config_set_write_increment(&dmaconfig, false); // no write incrementing

  dma_channel_configure(
      dma_tx,
      &dmaconfig,
      &spi_get_hw(TFT_SPIREG)->dr, // write address
      blocks[0],
      blocklens[0],
      false
  ); 

  irq_set_exclusive_handler(DMA_IRQ_0, dma_isr);
  dma_channel_set_irq0_enabled(dma_tx, true);
  irq_set_enabled(DMA_IRQ_0, true);
  dma_hw->ints0 = 1u << dma_tx;  
}

void TFT_T_DMA::begin(void) {
  spi_init(TFT_SPIREG, SPICLOCK);
  spi_set_format(TFT_SPIREG, 8, SPI_MODE, SPI_CPHA_0, SPI_MSB_FIRST);
  gpio_set_function(_sclk , GPIO_FUNC_SPI);
  gpio_set_function(_mosi , GPIO_FUNC_SPI);
  //gpio_set_function(_miso, GPIO_FUNC_SPI);
     
  // Initialize display
  if (_rst != 0xff) {
    gpio_init(_rst);
    gpio_set_dir(_rst, GPIO_OUT);     
    digitalWrite(_rst, 1);
    sleep_ms(100);
    digitalWrite(_rst, 0);
    sleep_ms(100);
    digitalWrite(_rst, 1);
    sleep_ms(200);
  }

  const uint8_t *addr = init_commands;
  digitalWrite(_cs, 0);
#ifdef ILI9341 
  while (1) {
    uint8_t count = *addr++;
    if (count-- == 0) break;

    digitalWrite(_dc, 0);
    SPItransfer(*addr++);

    while (count-- > 0) {
      digitalWrite(_dc, 1);
      SPItransfer(*addr++);
    }
  }
  
  digitalWrite(_dc, 0);
  SPItransfer(ILI9341_SLPOUT);
  digitalWrite(_dc, 1);
  digitalWrite(_cs, 1);

  digitalWrite(_dc, 1);
  digitalWrite(_cs, 1);

  digitalWrite(_dc, 0);
  digitalWrite(_cs, 0);
  SPItransfer(ILI9341_DISPON);
  digitalWrite(_dc, 1);
  digitalWrite(_cs, 1);
#endif
#ifdef ST7789
  uint8_t  numCommands, numArgs;
  uint16_t ms;
  numCommands = *addr++;    // Number of commands to follow
  while(numCommands--) {        // For each command...
    digitalWrite(_dc, 0);
    SPItransfer(*addr++);    
    numArgs  = *addr++; //   Number of args to follow
    ms       = numArgs & DELAY;   //   If hibit set, delay follows args
    numArgs &= ~DELAY;      //   Mask out delay bit
    while(numArgs > 1) {      //   For each argument...
      digitalWrite(_dc, 1);
      SPItransfer(*addr++);
      numArgs--;
    }

    if (numArgs)  {
      digitalWrite(_dc, 1);
      SPItransfer(*addr++);
    }
    if(ms) {
      ms = *addr++; // Read post-command delay time (ms)
      if(ms == 255) ms = 500;   // If 255, delay for 500 ms
      digitalWrite(_cs, 1);
      //SPI.endTransaction();
      sleep_ms(ms);
      //SPI.beginTransaction(SPISettings(SPICLOCK, MSBFIRST, SPI_MODE));
      digitalWrite(_cs, 0);
    }
  }
  digitalWrite(_cs, 1);
#endif
  setArea(0, 0, TFT_REALWIDTH-1, TFT_REALHEIGHT-1);  

  cancelled = false;

#ifdef FLIP_SCREEN          
  flipscreen(true);           
#else
  flipscreen(false);  
#endif   
#ifdef ST7789 
  if (TFT_REALWIDTH != TFT_REALHEIGHT)
  {
    //flipscreen(true);      
  }
#endif 
}

void TFT_T_DMA::flipscreen(bool flip)
{
  digitalWrite(_dc, 0);
  digitalWrite(_cs, 0);
  SPItransfer(TFT_MADCTL);
  digitalWrite(_dc, 1);
  if (flip) {
    flipped=true;
#ifdef ILI9341         
    SPItransfer(ILI9341_MADCTL_MV | ILI9341_MADCTL_BGR);
#endif
#ifdef ST7789
#ifdef ROTATE_SCREEN
    SPItransfer(ST77XX_MADCTL_RGB);
#else
    SPItransfer(ST77XX_MADCTL_MY | ST77XX_MADCTL_MV |ST77XX_MADCTL_RGB);
#endif
#endif    
  }
  else {
    flipped=false;
#ifdef ILI9341        
    SPItransfer(ILI9341_MADCTL_MX | ILI9341_MADCTL_MY | ILI9341_MADCTL_MV | ILI9341_MADCTL_BGR);
#endif
#ifdef ST7789
#ifdef ROTATE_SCREEN
    SPItransfer(ST77XX_MADCTL_MX | ST77XX_MADCTL_MY | ST77XX_MADCTL_RGB);
#else
    SPItransfer(ST77XX_MADCTL_MX | ST77XX_MADCTL_MV | ST77XX_MADCTL_RGB);
#endif
#endif    
  }
  digitalWrite(_cs, 1);   
}

void TFT_T_DMA::startDMA(void) {
  curTransfer = 0;  
  rstop = 0;     
  digitalWrite(_cs, 1);
  setDmaStruct();
  fillScreen(RGBVAL16(0x00,0x00,0x00));

  digitalWrite(_cs, 0); 
  setArea((TFT_REALWIDTH-TFT_WIDTH)/2, (TFT_REALHEIGHT-TFT_HEIGHT)/2, (TFT_REALWIDTH-TFT_WIDTH)/2 + TFT_WIDTH-1, (TFT_REALHEIGHT-TFT_HEIGHT)/2+TFT_HEIGHT-1);  
  // we switch to 16bit mode!!
  spi_set_format(TFT_SPIREG, 16, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);
  dma_start_channel_mask(1u << dma_tx);
}

void TFT_T_DMA::stopDMA(void) { 
  rstop = 0;
  wait();
  sleep_ms(100);
  cancelled = false;  
  //dmatx.detachInterrupt();
  fillScreen(RGBVAL16(0x00,0x00,0x00));
  digitalWrite(_cs, 1);
  // we switch to 8bit mode!!
  //spi_set_format(TFT_SPIREG, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);  
//#ifdef ST7789  
  begin();
//#endif
//#ifdef ILI9341 
//  SPI.begin();
//  digitalWrite(_cs, 0);
//  SPI.beginTransaction(SPISettings(SPICLOCK, MSBFIRST, SPI_MODE));  
//  SPI.endTransaction();
//  digitalWrite(_cs, 1);
//  digitalWrite(_dc, 1); 
//#endif    
  setArea(0, 0, TFT_REALWIDTH-1, TFT_REALHEIGHT-1);    
}
